Checking in back-end specific Makefiles for the various XT cross-compilation platforms.  General motivation for this is to be able to throw flags specific to a given back-end compiler.  Specific motivation in this case is that the PGI compiler does not use IEEE arithmetic by default, resulting in the majority of our PGI regressions.  So, using the platform-specific helper Makefile, we can throw the flag that tells it "no, we really do want you to use IEEE arithmetic."
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12005 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.xt-cnl
+++ b/make/Makefile.xt-cnl
@@ -19,6 +19,8 @@ RANLIB = ranlib
 # flags
 #
 
+-include $(CHAPEL_ROOT)/make/Makefile.xt-cnl.$(PE_ENV)
+
 DEBUG_CFLAGS = -g
 OPT_CFLAGS = 
 
@@ -28,5 +30,5 @@ LDFLAGS= -target=linux
 
 COMP_CFLAGS = $(CFLAGS)
 RUNTIME_CFLAGS = $(CFLAGS)
-GEN_CFLAGS = $(CFLAGS)
+GEN_CFLAGS = $(CFLAGS) $(XT_GEN_CFLAGS)
 GEN_LFLAGS = $(LFLAGS)
