--- a/make/Makefile.linux-intel
+++ b/make/Makefile.linux-intel
@@ -33,9 +33,9 @@ PROFILE_LFLAGS = -pg
 #
 
 COMP_CFLAGS = $(CFLAGS)
-COMP_CFLAGS_NONCHPL = -wr1419,193,111,1418
+COMP_CFLAGS_NONCHPL = -wr111,193,1418,1419
 RUNTIME_CFLAGS = $(CFLAGS)
-GEN_CFLAGS = -std=c99
+GEN_CFLAGS = -std=c99 -wr188
 
 #
 # Flags for turning on warnings for C++/C code
