Housecleaning: fixing ordering of flags to find to avoid warning.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12188 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.release
+++ b/make/Makefile.release
@@ -26,7 +26,7 @@ addcopyrights: $(PREPEND) FORCE
 	@cat COPYRIGHT >> $(RELCOPYRIGHT)
 	@echo >> $(RELCOPYRIGHT)
 	@echo >> $(RELCOPYRIGHT)
-	@find $(RELCHPLDIR) -name "Make*" -maxdepth 1 -exec $(ADDCOPYRIGHT) {} \;
+	@find $(RELCHPLDIR) -maxdepth 1 -name "Make*" -exec $(ADDCOPYRIGHT) {} \;
 	@find $(RELCOMPDIR) -name "Make*" -exec $(ADDCOPYRIGHT) {} \;
 	@find $(RELRTDIR) -name "Make*" -exec $(ADDCOPYRIGHT) {} \;
 	@find $(RELMAKEDIR) -name "Make*" -exec $(ADDCOPYRIGHT) {} \;
