Adding -nl 1 to the execution line of the Makefile test target.  Changed make.good to reflect this change.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12215 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/hpcc/HPL/marybeth/Makefile
+++ b/test/studies/hpcc/HPL/marybeth/Makefile
@@ -17,7 +17,7 @@ hpl_test: $(SOURCES)
 
 test:
 	@$(MAKE) CHPL="$(CHPL)" CHPL_FLAGS="$(TESTFLAGS)" all > /dev/null 2>&1
-	./hpl_test
+	./hpl_test -nl 1
 	cat $(OUTPUTFILE)
 
 clean: 
