Added support for an ARMCI-based runtime communication layer. Preliminary version, needs further refinement.
-- danich 10/25/07


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12229 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/comm-armci/Makefile.share
+++ b/runtime/comm-armci/Makefile.share
@@ -9,6 +9,6 @@ COMM_OBJS = \
 
 ARMCI_INSTALL = $(RUNTIME_ROOT)/../third-party/armci/install/$(CHPL_MAKE_PLATFORM)
 
-INCL_CFLAGS += -I$(ARMCI_INSTALL)/include
+INCL_CFLAGS += -I$(ARMCI_INSTALL)/include -I$(MPI_INCLUDE)
 
-RUNTIME_CFLAGS = $(INCL_CFLAGS)
+RUNTIME_CFLAGS = $(INCL_CFLAGS) -DARMCI_ENABLE_GPC_CALLS
