Fixed a couple build issues: removed a variable length array from chpl_cfg_threads.c (and possibly fixed a hang), and replaced references to threads-none in Makefile.include with threads-mta
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12287 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/threads-mta/Makefile.include
+++ b/runtime/threads-mta/Makefile.include
@@ -1,5 +1,5 @@
-THREADS_OBJDIR = $(RUNTIME_ROOT)/threads-none/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/comm-$(CHPL_COMM)
+THREADS_OBJDIR = $(RUNTIME_ROOT)/threads-mta/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/comm-$(CHPL_COMM)
 
-ALL_SRCS += threads-none/*.c
+ALL_SRCS += threads-mta/*.c
 
-include $(RUNTIME_ROOT)/threads-none/Makefile.share
+include $(RUNTIME_ROOT)/threads-mta/Makefile.share
