This change refactors our top-level Makefiles to make them better organized, more manageable, and smarter about defaults.  It relates to the general theme of separating Chapel host/target compiler information from Chapel host/target platform information.  It may not be completely perfect yet, but was hard to test on our cross-compilation platforms without checking in due to poor support for shared file systems and patching in new files.
In particular, this change:

* splits make/Makefile.<platform> files into
  make/compiler/Makefile.<compiler> and
  make/platform/Makefile.<platform> files
  where the Makefile.<compiler> files set all
  the tool names and flags for compiling and
  the .<platform> files override defaults for
  other tools (e.g., echo) or executable
  suffixes and such.

* This removes the need for a number of the
  .<platform> files that we had, since they
  simply included the common Makefile.gnu
  file, which is now a .<compiler> file.

* adds a notion of CHPL_HOST_COMPILER and
  CHPL_TARGET_COMPILER environment variables to set
  the compilers for either host (compiling the
  compiler) or target (compiling the runtime and
  generated code).  If unset, these are taken by
  default from the CHPL_HOST_PLATFORM and
  CHPL_TARGET_PLATFORM variables (which in turn are
  inferred as always if they are unset)

* adds compiler.pl, threads.pl, and comm.pl scripts
  to the util/ directory to return the default
  host/target compiler (similar to platform.pl), the
  default thread layer, and the default comm layer.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12367 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile
+++ b/make/Makefile
@@ -1,4 +1,7 @@
 CHAPEL_ROOT = ..
 include $(CHAPEL_ROOT)/make/Makefile.base
 
-all: printplatform
+all:
+	@$(MAKE) "CHPL_MAKE_HOST_TARGET=--host" printplatform
+	echo
+	@$(MAKE) "CHPL_MAKE_HOST_TARGET=--target" printplatform
