--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -17,16 +17,16 @@ include $(RUNTIME_ROOT)/make/Makefile.runtime.head
 #
 SUBDIRS = \
 	src \
-	threads-$(CHPL_THREADS) \
-	comm-$(CHPL_COMM) \
+	threads-$(CHPL_MAKE_THREADS) \
+	comm-$(CHPL_MAKE_COMM) \
 
 
 #
 # include source subdirectories here
 #
 include src/Makefile.include
-include threads-$(CHPL_THREADS)/Makefile.include
-include comm-$(CHPL_COMM)/Makefile.include
+include threads-$(CHPL_MAKE_THREADS)/Makefile.include
+include comm-$(CHPL_MAKE_COMM)/Makefile.include
 
 CVS_SRCS = 
 
@@ -35,7 +35,7 @@ RUNTIME_OBJS = \
 	$(THREADS_OBJS) \
 	$(COMM_OBJS) \
 
-RUNTIME_DIR = ../lib/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/comm-$(CHPL_COMM)
+RUNTIME_DIR = ../lib/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
 RUNTIME_LIB = $(RUNTIME_DIR)/libchpl.a
 RUNTIME_DIR_TIMESTAMP = $(RUNTIME_DIR)/timestamp
 
@@ -57,9 +57,9 @@ include $(RUNTIME_ROOT)/make/Makefile.runtime.rules
 $(RUNTIME_LIB): $(RUNTIME_OBJS) $(RUNTIME_DIR_TIMESTAMP)
 	$(AR) -rc $@ $(RUNTIME_OBJS)
 	$(RANLIB) $@
-	-@(which etags > /dev/null 2>&1 && echo "Updating TAGS..." && etags -o ../TAGS $(RUNTIME_SRCS) include/*.h include/threads-$(CHPL_THREADS)/*.h include/comm-$(CHPL_COMM)/*.h) || echo "etags not available"
+	-@(which etags > /dev/null 2>&1 && echo "Updating TAGS..." && etags -o ../TAGS $(RUNTIME_SRCS) include/*.h include/threads-$(CHPL_MAKE_THREADS)/*.h include/comm-$(CHPL_MAKE_COMM)/*.h) || echo "etags not available"
 
-$(RUNTIME_DIR)/main.o: src/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/comm-$(CHPL_COMM)/main.o
+$(RUNTIME_DIR)/main.o: src/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)/main.o
 	cp $< $@
 
 $(RUNTIME_DIR_TIMESTAMP):
