--- a/runtime/threads-none/Makefile.include
+++ b/runtime/threads-none/Makefile.include
@@ -1,4 +1,4 @@
-THREADS_OBJDIR = $(RUNTIME_ROOT)/threads-none/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/comm-$(CHPL_COMM)
+THREADS_OBJDIR = $(RUNTIME_ROOT)/threads-none/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
 
 ALL_SRCS += threads-none/*.c
 
