--- a/compiler/backend/Makefile.include
+++ b/compiler/backend/Makefile.include
@@ -1,4 +1,4 @@
-BACKEND_OBJDIR = $(COMPILER_ROOT)/backend/$(CHPL_MAKE_PLATFORM)
+BACKEND_OBJDIR = $(COMPILER_ROOT)/backend/$(OBJ_SUBDIR)
 
 ALL_SRCS += backend/*.cpp
 
