--- a/compiler/ifa/make_prims/Makefile
+++ b/compiler/ifa/make_prims/Makefile
@@ -19,7 +19,7 @@ MAKE_PRIMS = make_prims$(EXE_SUFFIX)
 MAKE_PRIMS_CVS_SRCS = \
 	make_prims.cpp
 MAKE_PRIMS_SRCS = $(MAKE_PRIMS_CVS_SRCS)
-MAKE_PRIMS_OBJS = $(MAKE_PRIMS_SRCS:%.cpp=$(CHPL_MAKE_PLATFORM)/%.o)
+MAKE_PRIMS_OBJS = $(MAKE_PRIMS_SRCS:%.cpp=$(OBJ_SUBDIR)/%.o)
 
 
 #
