--- a/compiler/passes/Makefile.include
+++ b/compiler/passes/Makefile.include
@@ -1,4 +1,4 @@
-PASSES_OBJDIR = $(COMPILER_ROOT)/passes/$(CHPL_MAKE_PLATFORM)
+PASSES_OBJDIR = $(COMPILER_ROOT)/passes/$(OBJ_SUBDIR)
 
 ALL_SRCS += passes/*.cpp
 
