--- a/compiler/util/Makefile.include
+++ b/compiler/util/Makefile.include
@@ -1,4 +1,4 @@
-UTIL_OBJDIR = $(COMPILER_ROOT)/util/$(CHPL_MAKE_PLATFORM)
+UTIL_OBJDIR = $(COMPILER_ROOT)/util/$(OBJ_SUBDIR)
 
 ALL_SRCS += util/*.cpp
 
