--- a/runtime/src/Makefile.include
+++ b/runtime/src/Makefile.include
@@ -1,4 +1,4 @@
-COMMON_OBJDIR = $(RUNTIME_ROOT)/src/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
+COMMON_OBJDIR = $(RUNTIME_ROOT)/src/$(OBJ_SUBDIR)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
 
 ALL_SRCS += src/*.c
 
