--- a/runtime/comm-gasnet/Makefile.include
+++ b/runtime/comm-gasnet/Makefile.include
@@ -1,4 +1,4 @@
-COMM_OBJDIR = $(RUNTIME_ROOT)/comm-gasnet/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
+COMM_OBJDIR = $(RUNTIME_ROOT)/comm-gasnet/$(OBJ_SUBDIR)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
 
 ALL_SRCS += comm-gasnet/*.c
 
