Cleaned up some testing rules in the Makefiles.  Little-known fact: if you are in the $CHPL_HOME/make directory, typing "make" will print the host and target platforms, compilers, threading layer, and communication layer used by the Makefiles (the latter two are printed twice, though only the target uses and determines their values).
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12388 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile
+++ b/make/Makefile
@@ -3,5 +3,5 @@ include $(CHAPEL_ROOT)/make/Makefile.base
 
 all:
 	@$(MAKE) "CHPL_MAKE_HOST_TARGET=--host" printplatform
-	echo
+	@echo
 	@$(MAKE) "CHPL_MAKE_HOST_TARGET=--target" printplatform
