Reordered the order in which compiler- and platform-specific settings are included by the Makefiles so that a platform can override a compiler's settings or add to them.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12399 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -110,7 +110,7 @@ EXE_SUFFIX =
 
 
 #
-# include platform-specific settings
+# include compiler- and platform-specific settings
 #
--include $(CHAPEL_ROOT)/make/platform/Makefile.$(CHPL_MAKE_PLATFORM)
 -include $(CHAPEL_ROOT)/make/compiler/Makefile.$(CHPL_MAKE_COMPILER)
+-include $(CHAPEL_ROOT)/make/platform/Makefile.$(CHPL_MAKE_PLATFORM)
