Two Makefile-related fixes based on this week's changes, noticed by Sam and me during the past 24 hours:
1) re-enabled CHPLDEVTMP, which had inadvertantly broken
   due to the new deeper object directories that we create

2) fixed the make clobber rule so that it would remove the
   entire $CHPL_PLATFORM object directory structure rather
   than $CHPL_PLATFORM/$CHPL_COMPILER.  The semantics of
   clobber are meant to be "return this to (something
   approximating) the files under CVS."


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12419 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -88,7 +88,7 @@ $(OBJ_SUBDIR_TIMESTAMP):
 	@echo linking $(OBJ_SUBDIR) subdirectory to store platform-specific files
 	@mkdir -p $(CHPLDEVTMP)/chapel-$(USER)$(CURDIR)/$(OBJ_SUBDIR)
 	@rm -f $(OBJ_SUBDIR)
-	@ln -s $(CHPLDEVTMP)/chapel-$(USER)$(CURDIR)/$(OBJ_SUBDIR) .
+	@ln -s $(CHPLDEVTMP)/chapel-$(USER)$(CURDIR)/$(CHPL_MAKE_PLATFORM) .
 	@-touch $(OBJ_SUBDIR_TIMESTAMP)
 endif
 
