When doing an XT native build using the PGI compiler suppress warnings about variables set but never used.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12441 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/compiler/Makefile.cray-xt-pgi
+++ b/make/compiler/Makefile.cray-xt-pgi
@@ -1,5 +1,5 @@
 # put XT cross-compilation pgi-specific settings here
 
-XT_GEN_CFLAGS = -Kieee
+XT_GEN_CFLAGS = -Kieee --diag_suppress177
 
 include $(CHAPEL_ROOT)/make/compiler/Makefile.cray-xt
