When doing an XT native build using the PGI compiler suppress warnings about variables set but never used. Actually do it this time.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12443 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/compiler/Makefile.cray-xt
+++ b/make/compiler/Makefile.cray-xt
@@ -28,7 +28,7 @@ CFLAGS = -target=linux
 LFLAGS = -target=linux
 LDFLAGS= -target=linux
 
-COMP_CFLAGS = $(CFLAGS)
+COMP_CFLAGS = $(CFLAGS) $(XT_COMP_CFLAGS)
 RUNTIME_CFLAGS = $(CFLAGS)
 GEN_CFLAGS = $(CFLAGS) $(XT_GEN_CFLAGS)
 GEN_LFLAGS = $(LFLAGS)
