--- a/make/compiler/Makefile.cray-xt-pgi
+++ b/make/compiler/Makefile.cray-xt-pgi
@@ -1,5 +1,6 @@
 # put XT cross-compilation pgi-specific settings here
 
-XT_GEN_CFLAGS = -Kieee --diag_suppress177
+XT_GEN_CFLAGS = -Kieee
+XT_COMP_CFLAGS = --diag_suppress550
 
 include $(CHAPEL_ROOT)/make/compiler/Makefile.cray-xt
