--- a/test/users/franzf/v2/chpl/Makefile
+++ b/test/users/franzf/v2/chpl/Makefile
@@ -2,7 +2,7 @@ NUMRUNS ?= 50000
 CHPL = chpl
 #FLAGS = --chplhome ~/chapel -O --no-bounds-checks --print-commands --ccflags "-Wall -O2 -fomit-frame-pointer -msse3 -std=c99"
 FLAGS = -O --no-bounds-checks --print-commands --ccflags "-Wall -O3 -fomit-frame-pointer -std=c99"
-TEST_FLAGS = -O --no-bounds-checks --ccflags "-O3 -fomit-frame-pointer -std=c99" -sprintTimings=false
+TEST_FLAGS = -O --no-bounds-checks -sprintTimings=false
 
 FFTLIB = fft_2.chpl fft_4.chpl fft_8.chpl fft_16.chpl fft_32.chpl fft_64.chpl fft_128.chpl fft_256.chpl fft_512.chpl fft_1024.chpl fft_2048.chpl 
 
