Added -std=c99 to GEN_FLAGS for compiling using gnu on xt.  We already do this for standard gnu compiles, but had not done so for xt.  This should fix the xt-cnl-linux64-gnu sin32bit regression last night.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12742 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/compiler/Makefile.cray-xt-gnu
+++ b/make/compiler/Makefile.cray-xt-gnu
@@ -1,3 +1,5 @@
 # put XT cross-compilation gnu-specific settings here
 
 include $(CHAPEL_ROOT)/make/compiler/Makefile.cray-xt
+
+GEN_CFLAGS += -std=c99
