Added a perl script collect_syntax.pl that is run when making the spec.  This script collects all of the syntax productions in the spec (except those created with \begin{syntax_donotcollect} instead of \begin{syntax}), removes duplicates, reports duplicates that do not match identically, alphabetizes them, and adds them to an appendix.
Fixed a couple of bugs with the rules that the error checking caught.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12759 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Makefile
+++ b/spec/Makefile
@@ -1,14 +1,18 @@
 all:
+	collect_syntax.pl
 	pdflatex -file-line-error -halt-on-error spec
 	makeindex spec
 	pdflatex -file-line-error -halt-on-error spec
+	collect_syntax.pl # again to show errors
 
 usedvi:
+	collect_syntax.pl
 	latex spec
 	makeindex spec
 	latex spec
 	dvips -P cmz -t letter -o spec.ps spec.dvi
 	ps2pdf spec.ps spec.pdf
+	collect_syntax.pl # again to show errors
 
 clean:
 	rm -f *.aux *.blg *.bbl *.dvi *.log
