Added tutorial test introducing arithmetic arrays in great detail.  This stuff works like a charm!
Updated READMEs and Makefile to handle both new
tests -- arrays and opaque.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12865 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/Makefile
+++ b/test/release/examples/Makefile
@@ -6,6 +6,7 @@ CHPL = chpl
 TARGETS = \
 	hello \
 	hello-module \
+	arrays \
 	beer \
         blockLU \
 	fileIO \
@@ -14,6 +15,7 @@ TARGETS = \
 	jacobi \
 	linkedList \
 	norm \
+	opaque \
 	prodCons \
 	quicksort \
 	reductions \
