One last change to hopefully make my other gdb test start working.  The last problem was that gdb's output message on a breakpoint varies depending on whether you compile with -g or not.  Since developers compile with -g and users typically do not, this created a bit of a conundrum.  Solved this by compiling the one file (with one routine, used only for breakpointing within gdb) with the -g flag for both users and developers.  This should cause this test to start working.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13087 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/src/Makefile
+++ b/runtime/src/Makefile
@@ -19,3 +19,11 @@ FORCE:
 # standard footer
 #
 include $(RUNTIME_ROOT)/make/Makefile.runtime.foot
+
+#
+# turn on debugging for gdb.c to help make debugging test uniform
+# for developers and users
+#
+$(RUNTIME_OBJ_DIR)/gdb.o: gdb.c $(RUNTIME_OBJ_DIR_STAMP)
+	@if [ `grep "chplrt.h" $< | wc -l` -ne 1 ]; then echo "PROBLEM:  $< does not include 'chplrt.h'."; exit 1; fi
+	$(CC) -c -g $(RUNTIME_CFLAGS) -o $@ $<
