Updating Makefile.cygwin to support error-free compilation.  This looks remarkably similar to the Makefile.sunos settings I made today.
Added ieeefp.h to chplcast.c, which seems to
fix the isnan() problem.  I'll try this same
fix on Sun next.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13117 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/platform/Makefile.cygwin
+++ b/make/platform/Makefile.cygwin
@@ -4,7 +4,11 @@
 EXE_SUFFIX=.exe
 
 #
-# seemingly necessary to get things like strtoull()
+# seemingly necessary to get vnsprintf for the runtime libraries
 #
-GEN_CFLAGS += -U__STRICT_ANSI__
+RUNTIME_CFLAGS += -U__STRICT_ANSI__
 
+#
+# seemingly necessary to get INT64_MAX and the like
+#
+GEN_CFLAGS +=  -U__STRICT_ANSI__
