--- a/make/compiler/Makefile.pathscale
+++ b/make/compiler/Makefile.pathscale
@@ -35,6 +35,7 @@ GEN_CFLAGS = -std=c99
 #
 WARN_CXXFLAGS = -Wall -Werror -Wno-unused -Wpointer-arith -Wwrite-strings
 WARN_CFLAGS = $(WARN_CXXFLAGS) -Wmissing-declarations -Wmissing-prototypes -Wstrict-prototypes -Wnested-externs -Wdeclaration-after-statement
+WARN_GEN_CFLAGS = $(WARN_CFLAGS) -Wno-unused
 
 
 #
@@ -43,4 +44,5 @@ WARN_CFLAGS = $(WARN_CXXFLAGS) -Wmissing-declarations -Wmissing-prototypes -Wstr
 ifdef CHPL_DEVELOPER
 COMP_CFLAGS += $(WARN_CXXFLAGS)
 RUNTIME_CFLAGS += $(WARN_CFLAGS)
+# GEN_CFLAGS gets warnings added via WARN_GEN_CFLAGS in comp-generated Makefile
 endif
